# local_weather_data_etl_pipeline

./: .gitignore  StreamHandler.scala  build.sbt  kafka_consumer.py  kafka_producer.py  pyproject.toml  readme.md  streamlit_visualisation.py
